# document2markdown

./: .gitignore  DEVELOPMENT.md  LICENSE  README.md  api.py  config.py  converter_docx.py  converter_pdf.py  converter_pptx.py  converter_vector.py  dispatcher.py  doc2md.py  document_model.py  postprocess.py  pyproject.toml  requirements.txt  utils.py
.github/workflows/: ci.yml
.kiro/: conversation_state.md
.kiro/specs/document-to-markdown/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/pdf-pymupdf4llm-refactor/: .config.kiro  design.md  requirements.md  tasks.md
docs/spec/: design.md  requirements.md  tasks.md
document2markdown/: __init__.py  api.py  config.py  converter_base.py  converter_docx.py  converter_html.py  converter_pdf.py  converter_pptx.py  converter_txt.py  converter_vector.py  converter_xlsx.py  dispatcher.py  document.py  document_model.py  errors.py  renderer_base.py  utils.py  writer.py
test_fixtures/: art-nouveau-P3.emf  art-nouveau-P3.eps  art-nouveau-P3.wmf  test.emf  test.eps  test.wmf
tests/: test_integration.py  test_live_vector.py  test_property_batch.py  test_property_dispatcher.py  test_property_docx.py  test_property_formats.py  test_property_headings.py  test_property_html.py  test_property_postprocess.py  test_property_vector.py  test_property_writer.py  test_unit_api.py  test_unit_cli.py  test_unit_dispatcher.py  test_unit_docx.py  test_unit_errors.py  test_unit_html.py  test_unit_pdf.py  test_unit_postprocess.py  test_unit_pptx.py  test_unit_renderer_writer.py  test_unit_txt.py  test_unit_vector.py
