[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "document2markdown"
version = "0.1.0"
description = "Convert PDF, DOCX, HTML, PPTX, XLSX, and TXT documents to Markdown"
license = {text = "MIT"}
authors = [
    {name = "Berk Akinci"}
]
requires-python = ">=3.12"
dependencies = [
    "PyMuPDF",
    "pymupdf4llm",
    "python-docx",
    "beautifulsoup4",
    "markdownify",
    "python-pptx",
    "python-magic",
    "Pillow",
    "openpyxl",
]

[project.urls]
Homepage = "https://github.com/berkakinci/document2markdown"
Repository = "https://github.com/berkakinci/document2markdown"
"Bug Tracker" = "https://github.com/berkakinci/document2markdown/issues"

[project.optional-dependencies]
dev = ["hypothesis"]

[project.scripts]
doc2md = "doc2md:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["document2markdown*"]
